--- a/app/src/main/res/layout-notouch/activity_lock.xml
+++ b/app/src/main/res/layout-notouch/activity_lock.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background3"
-    tools:context="com.example.tinkazorge.pointclickgame.LockActivity">
+    tools:context="nl.mprog.tinkazorge.pointclickgame.LockActivity">
 
     <!--<ImageView-->
         <!--android:layout_width="wrap_content"-->
