--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -1,41 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--Tinka Zorge PointClickGame-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/hills3"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/hills3"
-    tools:context="com.example.tinkazorge.pointclickgame.WinActivity">
+    android:screenOrientation="landscape"
+    tools:context="nl.mprog.tinkazorge.pointclickgame.WinActivity">
 
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Congratulations! You escaped!"
-        android:id="@+id/textView2"
-        android:textSize="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="30dp"
+        android:text="Congratulations! You escaped!"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20dp" />
 
     <Button
+        android:id="@+id/again_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Again"
-        android:id="@+id/again_button"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:text="Again" />
 
     <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="160dp"
         android:layout_height="200dp"
-        android:id="@+id/imageView4"
+        android:layout_marginLeft="370dp"
         android:layout_marginTop="130dp"
-        android:src="@drawable/chicken_party"
-        android:layout_marginLeft="370dp"/>
+        android:src="@drawable/chicken_party" />
 </RelativeLayout>
